--- a/src/app/search-result/path-details/path-details.component.html
+++ b/src/app/search-result/path-details/path-details.component.html
@@ -1,1 +1,34 @@
-<p>path-details works!</p>
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Mixed</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+       <p>
+         
+        </p>
+    </mat-card-content>
+</mat-card>
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Flight</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+            bred for hunting.
+        </p>
+    </mat-card-content>
+</mat-card>
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>Ground</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <p>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+            bred for hunting.
+        </p>
+    </mat-card-content>
+</mat-card>
