--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -1,8 +1,8 @@
-<mat-grid-list cols="4" rowHeight="100px">
-    <mat-grid-tile  class="aside-grid" [colspan]="1" [rowspan]="2">
-      <app-path-details [details]="pathDetails"></app-path-details>
+<mat-grid-list cols="4" rowHeight="200px">
+    <mat-grid-tile  class="aside-grid" [colspan]="1" [rowspan]="3">
+      <app-path-details [path]="pathDetails"></app-path-details>
     </mat-grid-tile>
-    <mat-grid-tile class="main-grid" [colspan]="3" [rowspan]="2" >
+    <mat-grid-tile class="main-grid" [colspan]="3" [rowspan]="3" >
         main
     </mat-grid-tile>
 </mat-grid-list>
