--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar color="primary" role="heading">
-    <span>My Logo</span>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <span>CheapTrip</span>
+    <!--     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>menu</mat-icon>
     </button>
  
-    <ul>
+   <ul>
         <li *ngFor="let menuItem of topMenu"><a href="">{{menuItem}}</a></li>
     </ul>
     <span class="spacer"></span>
@@ -19,6 +19,6 @@
             <button mat-button (click)="onLogout()">Logout</button>
         </li>
     </ul>
-   
-   
+    -->
+
 </mat-toolbar>
