--- a/src/app/search-result/search-result.component.scss
+++ b/src/app/search-result/search-result.component.scss
@@ -1,8 +1,8 @@
-.aside-grid{
-    border-right:3px solid grey;
-}
-mat-grid-list{
-    margin-top: 5px;
-    border: 5px solid red;
-    
+mat-grid-list {
+  margin-top: 5px;
+  border: 1px solid red;
+  .aside-grid {
+    border-right: 3px solid grey;
+    overflow-y: scroll;
+  }
 }
