--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -14,14 +14,14 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>CheapTrip</span>
-      <nav *ngIf="!(isHandset$ | async)"> <a *ngFor="let item of topMenu" href="#">{{item}}</a></nav>
+      <!--  <nav *ngIf="!(isHandset$ | async)"> <a *ngFor="let item of topMenu" href="#">{{item}}</a></nav>
       <span class="spacer"></span>
       <nav>
         <a *ngIf="!isAuthorised" href="#">Log In</a>
         <a *ngIf="isAuthorised" href="#">Sign Up</a>
-        <a *ngIf="!isAuthorised" href="#">Log Out</a></nav>
+        <a *ngIf="!isAuthorised" href="#">Log Out</a></nav> -->
     </mat-toolbar>
-<ng-content></ng-content>
+    <ng-content></ng-content>
   </mat-sidenav-content>
- 
+
 </mat-sidenav-container>
