with and time calculation

--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="4" rowHeight="90vh">
+<mat-grid-list cols="4" rowHeight="600px">
     <mat-grid-tile  class="aside-grid" [colspan]="asideColumns" [rowspan]="asideRows">
       <app-path-details [paths]="currentPaths"></app-path-details>
     </mat-grid-tile>
