--- a/src/app/search-result/path-details/path-details.component.scss
+++ b/src/app/search-result/path-details/path-details.component.scss
@@ -1,25 +1,27 @@
 :host {
-  width: 90%;
+  width: 100%;
   position: relative;
   top: 1rem;
+  height: 100%;
 }
 article {
-  width: 90%;
+  width: 95%;
   margin: 0.5rem auto;
   padding: 0.5rem;
-  background-color: indianred;
+  background-color: rgba(202, 199, 199, 0.479);
 
   section {
     border-bottom: 1px grey dashed;
     padding: 0.5rem;
     h4 {
-      background-color: rgb(32, 32, 32);
-      color: white;
+
+      color: blue;
+      font-weight: 800;
+    
     }
     div {
       display: flex;
       justify-content: flex-start;
-
       p {
         span {
           font-weight: 600;
@@ -30,8 +32,12 @@ article {
       }
     }
   }
+  section:last-child{
+      border: none;
+  }
   section.totalInfo {
-  // margin-bottom: 1rem;
-  background-color: hotpink;
+    box-shadow: 1px 1px 2px 3px rgba(128, 145,230,0.5);
+  background-color:whitesmoke;
+  border: none;
   }
 }
