--- a/src/app/search-result/search-result.component.scss
+++ b/src/app/search-result/search-result.component.scss
@@ -1,8 +1,11 @@
 mat-grid-list {
   margin-top: 5px;
-  border: 1px solid red;
+  height:400px;
+  width:100%;
+  margin: auto;
   .aside-grid {
-    border-right: 3px solid grey;
     overflow-y: scroll;
+    flex-direction: column;
+
   }
 }
