before landscape orientation

--- a/src/app/selectDirection/select-direction/select-direction.component.html
+++ b/src/app/selectDirection/select-direction/select-direction.component.html
@@ -3,7 +3,7 @@
   
      <form [formGroup]="directionForm" novalidate (ngSubmit)="onSubmit()">
             <mat-form-field class="full-width">
-                <input [(ngModel)]="directionTo" (input)="onChangeFrom($event.target.value)" type="text"
+                <input [(ngModel)]="directionFrom" (input)="onChangeFrom($event.target.value)" type="text"
                     placeholder="From" aria-label="Number" matInput formControlName="fromControl"
                     [matAutocomplete]="auto1">
                 <mat-autocomplete #auto1="matAutocomplete">
@@ -16,7 +16,7 @@
                 sync_alt
             </span>
             <mat-form-field class="full-width">
-                <input [(ngModel)]="directionFrom" (input)="onChangeTo($event.target.value)" type="text"
+                <input [(ngModel)]="directionTo" (input)="onChangeTo($event.target.value)" type="text"
                     placeholder="To" aria-label="Number" matInput formControlName="toControl" [matAutocomplete]="auto2">
                 <mat-autocomplete #auto2="matAutocomplete">
                     <mat-option *ngFor="let dir of directionToArr" [value]="dir">
@@ -24,7 +24,9 @@
                     </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
-            <button mat-flat-button color="primary" type="submit" [disabled]="directionForm.invalid">Let's go</button>
+  <!--           <button mat-flat-button color="primary" type="submit" [disabled]="directionForm.invalid">Let's go</button> -->
+            <button mat-flat-button color="primary" type="submit" >Let's go</button>
+      
         </form>
     
 </div>
