--- a/src/app/search-result/path-details/path-details.component.scss
+++ b/src/app/search-result/path-details/path-details.component.scss
@@ -1,10 +1,10 @@
 :host {
   width: 100%;
   position: relative;
-  top: 1rem;
-  height: 100%;
+  height: auto;
+  background-color: rgb(206, 205, 205);
 }
-article {
+/* article {
   width: 95%;
   margin: 0.5rem auto;
   padding: 0.5rem;
@@ -37,5 +37,64 @@ article {
     background-color: whitesmoke;
     border: none;
    border-radius: 3px ;
+  }
+}
+ */
+h3 {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  color: blue;
+  height: 2em;
+  background-color: rgb(206, 205, 205);
+}
+@media screen and (max-width: 650px) and (orientation: portrait) {
+  article {
+    width: 99%;
+    margin: 0.5rem auto;
+    padding: 0.5rem;
+    background-color: rgba(221, 221, 221, 0.479);
+    height: auto;
+    mat-accordion {
+      width: 100%;
+      height: inherit;
+      mat-expansion-panel {
+        padding: 0;
+        width: 100%;
+        mat-expansion-panel-header {
+          padding: 0;
+          align-items: stretch !important;
+          mat-panel-title {
+            background-color: rgb(206, 205, 205);
+            padding: 1em;
+            box-sizing: content-box;
+            span.material-icons {
+              transform: scale(1.5);
+              color: blue;
+            }
+          }
+          mat-panel-description {
+            font-weight: 400;
+
+            box-sizing: content-box;
+        //    background-color: greenyellow;
+            width: 100%;
+            div {
+              margin: 0;
+              padding: 0;
+              p:first-child {
+                color: blue;
+              //  background-color: hotpink;
+                padding-top:1em;
+              }
+            }
+          }
+        }
+        section {
+          margin-top: 1rem;
+          border-bottom: 1px solid grey;
+        }
+      }
+    }
   }
 }
