--- a/src/app/search-result/search-result.component.scss
+++ b/src/app/search-result/search-result.component.scss
@@ -6,6 +6,8 @@ mat-grid-list {
   .aside-grid {
     overflow-y: scroll;
     flex-direction: column;
+ //   justify-content: flex-start;
+  //  align-items: flex-start;
 
   }
 }
