--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="accent" role="heading">
+<mat-toolbar color="primary" role="heading">
     <span>CheapTrip</span>
     <!--     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>menu</mat-icon>
