befor create search on the second page

--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,24 +1,3 @@
 <mat-toolbar color="primary" role="heading">
-    <span>CheapTrip</span>
-    <!--     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
-    </button>
- 
-   <ul>
-        <li *ngFor="let menuItem of topMenu"><a href="">{{menuItem}}</a></li>
-    </ul>
-    <span class="spacer"></span>
-    <ul>
-        <li *ngIf="!userIsAuthenticated">
-            <a mat-button routerLink="/auth/login" routerLinkActive="mat-accent">Login</a>
-        </li>
-        <li *ngIf="!userIsAuthenticated">
-            <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent">Signup</a>
-        </li>
-        <li *ngIf="userIsAuthenticated">
-            <button mat-button (click)="onLogout()">Logout</button>
-        </li>
-    </ul>
-    -->
-
+    <img src="../../../assets/images/logo.jpg" alt="CheapTrip" (click)="toHomePage()" matTooltip="Home">
 </mat-toolbar>
