--- a/src/app/header/header/header.component.scss
+++ b/src/app/header/header/header.component.scss
@@ -1,5 +1,15 @@
-mat-toolbar {
-  margin: 0;
-  box-sizing: content-box;
+img{
+    width:3rem;
+    cursor: pointer;
 }
+div{
+    position: relative;
+   
+    .material-icons{
+        
+    display: block;
+    
+}
+}
+
   
